# paper-pilot

./: .gitignore  README.md  docker-compose.ghcr.yml  docker-compose.yml  docker.env.example
.github/workflows/: docker-ghcr.yml
client/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/src/: _load_env.py  main.py  server.py
server/src/api/routes/: v1.py
server/src/api/services/: annotator.py  cleaner.py  coherence.py  language_support.py  parser.py  spellcheck.py  upload.py
